--- a/src/usr_02.tex
+++ b/src/usr_02.tex
@@ -318,7 +318,7 @@ More about that in section |\hyperref[Numbering changes]{\texttt{Numbering chang
 \subsection{Other editing commands}
 
 Vim has a large number of commands to change the text.
-See |\texttt{:h Q_in}| and below.
+See |\texttt{:h Q\_in}| and below.
 Here are a few often used ones.
 
 \subsubsection{Appending}
@@ -490,7 +490,7 @@ For example, the following command displays help for the normal-mode CTRL-H comm
  \end{Verbatim}
 
 To identify other modes, use a mode prefix.
-If you want the help for the insert-mode version of a command, use "\texttt{i_}".
+If you want the help for the insert-mode version of a command, use "\texttt{i\_}".
 For CTRL-H this gives you the following command: 
 
  \begin{Verbatim}[samepage=true]
