--- a/src/usr_04.tex
+++ b/src/usr_04.tex
@@ -71,7 +71,7 @@ Or more specifically, it deletes a word and then puts you in Insert mode.
     To be human 
 \end{Verbatim}
 
-This "\verb!c2wbe<Esc>!" contains these bits:
+This "\texttt{c2wbe<Esc>}" contains these bits:
 \begin{center}
 \begin{tabular}{c c}
 				c & the change operator\\
@@ -120,7 +120,7 @@ The commands "\texttt{3dw}" and "\texttt{d3w}" delete three words.
 If you want to get really picky about things, the first command, "\texttt{3dw}", deletes one word three times; the command "\texttt{d3w}" deletes three words once.
 This is a difference without a distinction.
 You can actually put in two counts, however.
-For example, "\verb!3d2w!" deletes two words, repeated three times, for a total of six words.
+For example, "\texttt{3d2w}" deletes two words, repeated three times, for a total of six words.
 
 \subsubsection{Replacing with one character}
 
