--- a/src/usr_07.tex
+++ b/src/usr_07.tex
@@ -193,7 +193,7 @@ If you really want to exit, just do it again.
 Then it will work (but not when you did other commands in between).
 
 \subsection{Jumping from file to file}
-To quickly jump between two files, press \texttt{CTRL-^}  (on English-US keyboards the \^  is above the 6 key).
+To quickly jump between two files, press \texttt{CTRL-\^{}}  (on English-US keyboards the \^{}  is above the 6 key).
 Example:
 
  \begin{Verbatim}[samepage=true]
@@ -207,9 +207,9 @@ You are now in one.c.
  \end{Verbatim}
 
 Now you are in \texttt{two.c}.
-Now use \texttt{CTRL-^} to go back to \texttt{one.c}.
-Another \texttt{CTRL-^} and you are back in \texttt{two.c}.
-Another \texttt{CTRL-^} and you are in \texttt{one.c} again.
+Now use \texttt{CTRL-\^{}} to go back to \texttt{one.c}.
+Another \texttt{CTRL-\^{}} and you are back in \texttt{two.c}.
+Another \texttt{CTRL-\^{}} and you are in \texttt{one.c} again.
 If you now do:
 
  \begin{Verbatim}[samepage=true]
@@ -217,11 +217,11 @@ If you now do:
  \end{Verbatim}
 
 You are in \texttt{three.c}.
-Notice that the \texttt{CTRL-^} command does not change the idea of where you are in the list of files.
+Notice that the \texttt{CTRL-\^{}} command does not change the idea of where you are in the list of files.
 Only commands like "\texttt{:next}" and "\texttt{:previous}" do that.
 
 The file you were previously editing is called the "alternate" file.
-When you just started Vim \texttt{CTRL-^} will not work, since there isn't a previous file.
+When you just started Vim \texttt{CTRL-\^{}} will not work, since there isn't a previous file.
 
 \subsubsection{Predefined marks}
 After jumping to another file, you can use two predefined marks which are very useful:
