--- a/src/usr_08.tex
+++ b/src/usr_08.tex
@@ -202,7 +202,7 @@ Then you can use these commands to move between them:
 You will notice the same letters as used for moving the cursor.
 And the cursor keys can also be used, if you like.
 
-More commands to move to other windows: |\texttt{:h Q_wi}|.
+More commands to move to other windows: |\texttt{:h Q\_wi}|.
 \subsection{Moving windows}
 You have split a few windows, but now they are in the wrong place.
 Then you need a command to move the window somewhere else.
@@ -510,7 +510,7 @@ For Command-line commands this is done by prepending an "\texttt{s}".
 For example: "\texttt{:tag}" jumps to a tag, "\texttt{:stag}" splits the window and jumps to a tag.
 
 For Normal mode commands a CTRL-W is prepended.
-\texttt{CTRL-^} jumps to the alternate file, CTRL-W \texttt{CTRL-^} splits the window and edits the alternate file.
+\texttt{CTRL-\^{}} jumps to the alternate file, CTRL-W \texttt{CTRL-\^{}} splits the window and edits the alternate file.
 
 The \texttt{'splitbelow'} option can be set to make a new window appear below the current window.
 The \texttt{'splitright'} option can be set to make a vertically split window appear right of the current window.
