--- a/src/usr_20.tex
+++ b/src/usr_20.tex
@@ -283,7 +283,7 @@ In this case "is" stands for the short name of "\texttt{incsearch}".
 (Many options have a short and a long name.)  Vim is clever enough to know that you might have wanted to expand the short name of the option into the long name.
 \subsubsection{There is more}
 The CTRL-L command completes the word to the longest unambiguous string.
-If you type "\texttt{:edit i}" and there are files "\texttt{info.txt}" and "\texttt{info_backup.txt}" you will get "\texttt{:edit info}".
+If you type "\texttt{:edit i}" and there are files "\texttt{info.txt}" and "\texttt{info\_backup.txt}" you will get "\texttt{:edit info}".
 
 The \texttt{'wildmode'} option can be used to change the way completion works.
 The \texttt{'wildmenu'} option can be used to get a menu-like list of matches.
