--- a/src/usr_22.tex
+++ b/src/usr_22.tex
@@ -340,8 +340,8 @@ Then the name of the file and the line number where the cursor was the last time
 The flags that can appear are these (from left to right):
 \begin{center} \begin{tabular}{c l}
 				\texttt{u} &  Buffer is unlisted |\texttt{:h unlisted-buffer}|. \\
-				\texttt{  %} &  Current buffer. \\
-				\texttt{  #} &  Alternate buffer. \\
+				\texttt{  \%} &  Current buffer. \\
+				\texttt{  \#} &  Alternate buffer. \\
 				\texttt{    a} & Buffer is loaded and displayed. \\
 				\texttt{    h} & Buffer is loaded but hidden. \\
 				\texttt{      =} & Buffer is read-only. \\
