--- a/src/usr_28.tex
+++ b/src/usr_28.tex
@@ -36,9 +36,9 @@ Try it out: Position the cursor in a paragraph and type:
 
 You will see that the paragraph is replaced by a highlighted line.
 You have created a fold.
-|\verb!:h zf!| is an operator and |\verb!:h ap!| a text object selection.
-You can use the |\verb!:h zf!| operator with any movement command to create a fold for the text that it moved over.
-|\verb!:h zf!| also works in Visual mode.
+|\texttt{:h zf}| is an operator and |\texttt{:h ap}| a text object selection.
+You can use the |\texttt{:h zf}| operator with any movement command to create a fold for the text that it moved over.
+|\texttt{:h zf}| also works in Visual mode.
 
 To view the text again, open the fold by typing:
 
@@ -52,9 +52,9 @@ And you can close the fold again with:
  zc
 \end{Verbatim}
 
-All the folding commands start with "\verb!z!".
+All the folding commands start with "\texttt{z}".
 With some fantasy, this looks like a folded piece of paper, seen from the side.
-The letter after the "\verb!z!" has a mnemonic meaning to make it easier to remember the commands:
+The letter after the "\texttt{z}" has a mnemonic meaning to make it easier to remember the commands:
 \begin{center} \begin{tabular}{c l}
 				zf & F-old creation \\
 				zo & O-pen a fold \\
@@ -67,7 +67,7 @@ Try it out.
 You will notice that opening the fold for the whole chapter will restore the nested folds as they were, some may be open and some may be closed.
 
 Suppose you have created several folds, and now want to view all the text.
-You could go to each fold and type "\verb!zo!".
+You could go to each fold and type "\texttt{zo}".
 To do this faster, use this command:
 
 \begin{Verbatim}[samepage=true]
@@ -82,7 +82,7 @@ The opposite is:
 \end{Verbatim}
 
 This folds M-ore.
-You can repeat "\verb!zr!" and "\verb!zm!" to open and close nested folds of several levels.
+You can repeat "\texttt{zr}" and "\texttt{zm}" to open and close nested folds of several levels.
 
 If you have nested several levels deep, you can open all of them with:
 
@@ -99,38 +99,38 @@ And you can close all folds with:
 
 This folds M-ore and M-ore.
 
-You can quickly disable the folding with the |\verb!:h zn!| command.
-Then |\verb!:h zN!| brings back the folding as it was.
-|\verb!:h zi!| toggles between the two.
+You can quickly disable the folding with the |\texttt{:h zn}| command.
+Then |\texttt{:h zN}| brings back the folding as it was.
+|\texttt{:h zi}| toggles between the two.
 This is a useful way of working:
 
 \begin{itemize}
 \item create folds to get overview on your file
 \item move around to where you want to do your work
-\item do |\verb!:h zi!| to look at the text and edit it
-\item do |\verb!:h zi!| again to go back to moving around
+\item do |\texttt{:h zi}| to look at the text and edit it
+\item do |\texttt{:h zi}| again to go back to moving around
 \end{itemize}
 
-More about manual folding in the reference manual: |\verb!:h fold-manual!|
+More about manual folding in the reference manual: |\texttt{:h fold-manual}|
 \subsection{Working with folds}
-When some folds are closed, movement commands like "\verb!j!" and "\verb!k!" move over a fold like it was a single, empty line.
+When some folds are closed, movement commands like "\texttt{j}" and "\texttt{k}" move over a fold like it was a single, empty line.
 This allows you to quickly move around over folded text.
 
 You can yank, delete and put folds as if it was a single line.
 This is very useful if you want to reorder functions in a program.
-First make sure that each fold contains a whole function (or a bit less) by selecting the right \verb!'foldmethod'!.
-Then delete the function with "\verb!dd!", move the cursor and put it with "\verb!p!".
+First make sure that each fold contains a whole function (or a bit less) by selecting the right \texttt{'foldmethod'}.
+Then delete the function with "\texttt{dd}", move the cursor and put it with "\texttt{p}".
 If some lines of the function are above or below the fold, you can use Visual selection:
 
 \begin{itemize}
 \item put the cursor on the first line to be moved
-\item hit "\verb!V!" to start Visual mode
+\item hit "\texttt{V}" to start Visual mode
 \item put the cursor on the last line to be moved
-\item hit "\verb!d!" to delete the selected lines.
-\item move the cursor to the new position and "\verb!p!"ut the lines there.
+\item hit "\texttt{d}" to delete the selected lines.
+\item move the cursor to the new position and "\texttt{p}"ut the lines there.
 \end{itemize}
 
-It is sometimes difficult to see or remember where a fold is located, thus where a |\verb!:h zo!| command would actually work.
+It is sometimes difficult to see or remember where a fold is located, thus where a |\texttt{:h zo}| command would actually work.
 To see the defined folds:
 
 \begin{Verbatim}[samepage=true]
@@ -138,17 +138,17 @@ To see the defined folds:
 \end{Verbatim}
 
 This will show a small column on the left of the window to indicate folds.
-A "\verb!+!" is shown for a closed fold.
-A "\verb!-!" is shown at the start of each open fold and "\verb!|!" at following lines of the fold.
+A "\texttt{+}" is shown for a closed fold.
+A "\texttt{-}" is shown at the start of each open fold and "\texttt{|}" at following lines of the fold.
 
-You can use the mouse to open a fold by clicking on the "\verb!+!" in the foldcolumn.
-Clicking on the "\verb!-!" or a "\verb!|!" below it will close an open fold.
+You can use the mouse to open a fold by clicking on the "\texttt{+}" in the foldcolumn.
+Clicking on the "\texttt{-}" or a "\texttt{|}" below it will close an open fold.
 
 \begin{itemize}
-	\item To open all folds at the cursor line use |\verb!:h zO!|.
-	\item To close all folds at the cursor line use |\verb!:h zC!|.
-	\item To delete a fold at the cursor line use |\verb!:h zd!|.
-	\item To delete all folds at the cursor line use |\verb!:h zD!|.
+	\item To open all folds at the cursor line use |\texttt{:h zO}|.
+	\item To close all folds at the cursor line use |\texttt{:h zC}|.
+	\item To delete a fold at the cursor line use |\texttt{:h zd}|.
+	\item To delete all folds at the cursor line use |\texttt{:h zD}|.
 \end{itemize}
 
 
@@ -156,8 +156,8 @@ When in Insert mode, the fold at the cursor line is never closed.
 That allows you to see what you type!
 
 Folds are opened automatically when jumping around or moving the cursor left or right.
-For example, the "\verb!0!" command opens the fold under the cursor (if \verb!'foldopen'! contains "\verb!hor!", which is the default).
-The \verb!'foldopen'! option can be changed to open folds for specific commands.
+For example, the "\texttt{0}" command opens the fold under the cursor (if \texttt{'foldopen'} contains "\texttt{hor}", which is the default).
+The \texttt{'foldopen'} option can be changed to open folds for specific commands.
 If you want the line under the cursor always to be open, do this:
 
 \begin{Verbatim}[samepage=true]
@@ -177,9 +177,9 @@ You can make folds close automatically when you move out of it:
  :set foldclose=all
 \end{Verbatim}
 
-This will re-apply \verb!'foldlevel'! to all folds that don't contain the cursor.
+This will re-apply \texttt{'foldlevel'} to all folds that don't contain the cursor.
 You have to try it out if you like how this feels.
-Use |\verb!:h zm!| to fold more and |\verb!:h zr!| to fold less (reduce folds).
+Use |\texttt{:h zm}| to fold more and |\texttt{:h zr}| to fold less (reduce folds).
 
 The folding is local to the window.
 This allows you to open two windows on the same buffer, one with folds and one without folds.
@@ -187,14 +187,14 @@ Or one with all folds closed and one with all folds open.
 \subsection{Saving and restoring folds}
 When you abandon a file (starting to edit another one), the state of the folds is lost.
 If you come back to the same file later, all manually opened and closed folds are back to their default.
-When folds have been created manually, all folds are gone!  To save the folds use the |\verb!:h :mkview!| command:
+When folds have been created manually, all folds are gone!  To save the folds use the |\texttt{:h :mkview}| command:
 
 \begin{Verbatim}[samepage=true]
  :mkview
 \end{Verbatim}
 
 This will store the settings and other things that influence the view on the file.
-You can change what is stored with the \verb!'viewoptions'! option.
+You can change what is stored with the \texttt{'viewoptions'} option.
 When you come back to the same file later, you can load the view again:
 
 \begin{Verbatim}[samepage=true]
@@ -210,22 +210,22 @@ For example, to save the current setup as the third view and load the second vie
 \end{Verbatim}
 
 Note that when you insert or delete lines the views might become invalid.
-Also check out the \verb!'viewdir'! option, which specifies where the views are stored.
+Also check out the \texttt{'viewdir'} option, which specifies where the views are stored.
 You might want to delete old views now and then.
 \subsection{Folding by indent}
-Defining folds with |\verb!:h zf!| is a lot of work.
+Defining folds with |\texttt{:h zf}| is a lot of work.
 If your text is structured by giving lower level items a larger indent, you can use the indent folding method.
 This will create folds for every sequence of lines with the same indent.
 Lines with a larger indent will become nested folds.
 This works well with many programming languages.
 
-Try this by setting the \verb!'foldmethod'! option:
+Try this by setting the \texttt{'foldmethod'} option:
 
 \begin{Verbatim}[samepage=true]
  :set foldmethod=indent
 \end{Verbatim}
 
-Then you can use the |\verb!:h zm!| and |\verb!:h zr!| commands to fold more and reduce folding.
+Then you can use the |\texttt{:h zm}| and |\texttt{:h zr}| commands to fold more and reduce folding.
 It's easy to see on this example text:
 
 \begin{Verbatim}[samepage=true]
@@ -239,38 +239,38 @@ This line is not indented
     This line is indented once
 \end{Verbatim}
 
-Note that the relation between the amount of indent and the fold depth depends on the \verb!'shiftwidth'! option.
-Each \verb!'shiftwidth'! worth of indent adds one to the depth of the fold.
+Note that the relation between the amount of indent and the fold depth depends on the \texttt{'shiftwidth'} option.
+Each \texttt{'shiftwidth'} worth of indent adds one to the depth of the fold.
 This is called a fold level.
 
-When you use the |\verb!:h zr!| and |\verb!:h zm!| commands you actually increase or decrease the \verb!'foldlevel'! option.
+When you use the |\texttt{:h zr}| and |\texttt{:h zm}| commands you actually increase or decrease the \texttt{'foldlevel'} option.
 You could also set it directly:
 
 \begin{Verbatim}[samepage=true]
  :set foldlevel=3
 \end{Verbatim}
 
-This means that all folds with three times a \verb!'shiftwidth'! indent or more will be closed.
+This means that all folds with three times a \texttt{'shiftwidth'} indent or more will be closed.
 The lower the foldlevel, the more folds will be closed.
-When \verb!'foldlevel'! is zero, all folds are closed.
-|\verb!:h zM!| does set \verb!'foldlevel'! to zero.
-The opposite command |\verb!:h zR!| sets \verb!'foldlevel'! to the deepest fold level that is present in the file.
+When \texttt{'foldlevel'} is zero, all folds are closed.
+|\texttt{:h zM}| does set \texttt{'foldlevel'} to zero.
+The opposite command |\texttt{:h zR}| sets \texttt{'foldlevel'} to the deepest fold level that is present in the file.
 
 Thus there are two ways to open and close the folds:
 \begin{enumerate}
 \item By setting the fold level.
 This gives a very quick way of "zooming out" to view the structure of the text, move the cursor, and "zoom in" on the text again.
 
-\item By using |\verb!:h zo!| and |\verb!:h zc!| commands to open or close specific folds.
+\item By using |\texttt{:h zo}| and |\texttt{:h zc}| commands to open or close specific folds.
 This allows opening only those folds that you want to be open, while other folds remain closed.
 \end{enumerate}
 
-This can be combined: You can first close most folds by using |\verb!:h zm!| a few times and then open a specific fold with b!|\verb!:h zo!|!.
-Or open all folds with |\verb!:h zR!| and then close specific folds with |\verb!:h zc!|.
+This can be combined: You can first close most folds by using |\texttt{:h zm!| a few times and then open a specific fold with b}|\texttt{:h zo!|}.
+Or open all folds with |\texttt{:h zR}| and then close specific folds with |\texttt{:h zc}|.
 
-But you cannot manually define folds when \verb!'foldmethod'! is "indent", as that would conflict with the relation between the indent and the fold level.
+But you cannot manually define folds when \texttt{'foldmethod'} is "indent", as that would conflict with the relation between the indent and the fold level.
 
-More about folding by indent in the reference manual: |\verb!:h fold-indent!|
+More about folding by indent in the reference manual: |\texttt{:h fold-indent}|
 \subsection{Folding with markers}
 Markers in the text are used to specify the start and end of a fold region.
 This gives precise control over which lines are included in a fold.
@@ -320,13 +320,13 @@ This will make any fold at a higher level stop here.
 You can just use numbered start markers to define all folds.
 Only when you want to explicitly stop a fold before another starts you need to add an end marker.
 
-More about folding with markers in the reference manual: |\verb!:h fold-marker!|
+More about folding with markers in the reference manual: |\texttt{:h fold-marker}|
 \subsection{Folding by syntax}
 For each language Vim uses a different syntax file.
 This defines the colors for various items in the file.
-If you are reading this in Vim, in a terminal that supports colors, the colors you see are made with the "\verb!help!" syntax file.
+If you are reading this in Vim, in a terminal that supports colors, the colors you see are made with the "\texttt{help}" syntax file.
 
-In the syntax files it is possible to add syntax items that have the "\verb!fold!" argument.
+In the syntax files it is possible to add syntax items that have the "\texttt{fold}" argument.
 These define a fold region.
 This requires writing a syntax file and adding these items in it.
 That's not so easy to do.
@@ -337,11 +337,11 @@ Then there is nothing more to explain.
 You can open and close folds as explained above.
 The folds will be created and deleted automatically when you edit the file.
 
-More about folding by syntax in the reference manual: |\verb!:h fold-syntax!|
+More about folding by syntax in the reference manual: |\texttt{:h fold-syntax}|
 \subsection{Folding by expression}
 This is similar to folding by indent, but instead of using the indent of a line a user function is called to compute the fold level of a line.
 You can use this for text where something in the text indicates which lines belong together.
-An example is an e-mail message where the quoted text is indicated by a "\verb!>!" before the line.
+An example is an e-mail message where the quoted text is indicated by a "\texttt{>}" before the line.
 To fold these quotes use this:
 
 \begin{Verbatim}[samepage=true]
@@ -358,14 +358,14 @@ You can try it out on this text:
 > > double quoted text I wrote
 \end{Verbatim}
 
-Explanation for the \verb!'foldexpr'! used in the example (inside out):
+Explanation for the \texttt{'foldexpr'} used in the example (inside out):
 \begin{center} \begin{tabular}{l l}
-				\verb!getline(v:lnum) ! & gets the current line \\
-				\verb!substitute(...,'\\s','','g') ! & removes all white space from the line \\
-				\verb!substitute(...,'[^>].*','','') ! & removes everything after leading `>'s \\
-				\verb!strlen(...) ! & counts the length of the string, which is the number of `>'s found \\
+				\texttt{getline(v:lnum) } & gets the current line \\
+				\texttt{substitute(...,'\textbackslash{}\textbackslash{}s','','g') } & removes all white space from the line \\
+				\texttt{substitute(...,'[\^{}>].*','','') } & removes everything after leading `>'s \\
+				\texttt{strlen(...) } & counts the length of the string, which is the number of `>'s found \\
 \end{tabular} \end{center}
-Note that a backslash must be inserted before every space, double quote and backslash for the "\verb!:set!" command.
+Note that a backslash must be inserted before every space, double quote and backslash for the "\texttt{:set}" command.
 If this confuses you, do
 
 \begin{Verbatim}[samepage=true]
@@ -382,12 +382,12 @@ To correct a complicated expression, use the command-line completion:
 Where <Tab> is a real Tab.
 Vim will fill in the previous value, which you can then edit.
 
-When the expression gets more complicated you should put it in a function and set \verb!'foldexpr'! to call that function.
+When the expression gets more complicated you should put it in a function and set \texttt{'foldexpr'} to call that function.
 
-More about folding by expression in the reference manual: |\verb!:h fold-expr!|
+More about folding by expression in the reference manual: |\texttt{:h fold-expr}|
 \subsection{Folding unchanged lines}
-This is useful when you set the \verb!'diff'! option in the same window.
-The |\verb!:h vimdiff!| command does this for you.
+This is useful when you set the \texttt{'diff'} option in the same window.
+The |\texttt{:h vimdiff}| command does this for you.
 Example:
 
 \begin{Verbatim}[samepage=true]
@@ -397,7 +397,7 @@ Example:
 Do this in every window that shows a different version of the same file.
 You will clearly see the differences between the files, while the text that didn't change is folded.
 
-For more details see |\verb!:h fold-diff!|.
+For more details see |\texttt{:h fold-diff}|.
 \subsection{Which fold method to use?}
 All these possibilities make you wonder which method you should choose.
 Unfortunately, there is no golden rule.
@@ -409,7 +409,7 @@ This requires a good knowledge of search patterns.
 It's not easy, but when it's working you will not have to define folds manually.
 
 Typing commands to manually fold regions can be used for unstructured text.
-Then use the |\verb!:h :mkview!| command to save and restore your folds.
+Then use the |\texttt{:h :mkview}| command to save and restore your folds.
 
 The marker method requires you to change the file.
 If you are sharing the files with other people or you have to meet company standards, you might not be allowed to add them.
@@ -421,12 +421,12 @@ And you can add a comment about what is contained in the fold.
 Folding by indent is something that works in many files, but not always very well.
 Use it when you can't use one of the other methods.
 However, it is very useful for outlining.
-Then you specifically use one \verb!'shiftwidth'! for each nesting level.
+Then you specifically use one \texttt{'shiftwidth'} for each nesting level.
 
 Folding with expressions can make folds in almost any structured text.
 It is quite simple to specify, especially if the start and end of a fold can easily be recognized.
 
-If you use the "\verb!expr!" method to define folds, but they are not exactly how you want them, you could switch to the "\verb!manual!" method.
+If you use the "\texttt{expr}" method to define folds, but they are not exactly how you want them, you could switch to the "\texttt{manual}" method.
 This will not remove the defined folds.
 Then you can delete or add folds manually.
 \clearpage
