--- a/src/usr_30.tex
+++ b/src/usr_30.tex
@@ -4,11 +4,11 @@ Compile a program and directly jump to reported errors.
 Automatically set the indent for many languages and format comments.
 %\localtableofcontentswithrelativedepth{+1}
 \subsection{Compiling}
-Vim has a set of so called "\verb!quickfix!" commands.
+Vim has a set of so called "\texttt{quickfix}" commands.
 They enable you to compile a program from within Vim and then go through the errors generated and fix them (hopefully).
 You can then recompile and fix any new errors that are found until finally your program compiles without any error.
 
-The following command runs the program "\verb!make!" (supplying it with any argument you give) and captures the results:
+The following command runs the program "\texttt{make}" (supplying it with any argument you give) and captures the results:
 
 \begin{Verbatim}[samepage=true]
  :make {arguments}
@@ -16,8 +16,8 @@ The following command runs the program "\verb!make!" (supplying it with any argu
 
 If errors were generated, they are captured and the editor positions you where the first error occurred.
 
-Take a look at an example "\verb!:make!" session.
-(Typical :make sessions generate far more errors and fewer stupid ones.)  After typing "\verb!:make!" the screen looks like this:
+Take a look at an example "\texttt{:make}" session.
+(Typical :make sessions generate far more errors and fewer stupid ones.)  After typing "\texttt{:make}" the screen looks like this:
 
 \begin{Verbatim}[samepage=true]
     :!make | &tee /tmp/vim215953.err 
@@ -34,8 +34,8 @@ Take a look at an example "\verb!:make!" session.
     Press ENTER or type command to continue 
 \end{Verbatim}
 
-From this you can see that you have errors in the file "\verb!main.c!".
-When you press <Enter>, Vim displays the file "\verb!main.c!", with the cursor positioned on line 6, the first line with an error.
+From this you can see that you have errors in the file "\texttt{main.c}".
+When you press <Enter>, Vim displays the file "\texttt{main.c}", with the cursor positioned on line 6, the first line with an error.
 You did not need to specify the file or the line number, Vim knew where to go by looking in the error messages.
 
 \begin{Verbatim}[samepage=true]
@@ -59,7 +59,7 @@ The following command goes to where the next error occurs:
  :cnext
 \end{Verbatim}
 
-Vim jumps to line 10, the last line in the file, where there is an extra '\verb!}!'.
+Vim jumps to line 10, the last line in the file, where there is an extra '\texttt{\}}'.
 
 When there is not enough room, Vim will shorten the error message.
 To see the whole message use:
@@ -68,7 +68,7 @@ To see the whole message use:
  :cc
 \end{Verbatim}
 
-You can get an overview of all the error messages with the "\verb!:clist!" command.
+You can get an overview of all the error messages with the "\texttt{:clist}" command.
 The output looks like this:
 
 \begin{Verbatim}[samepage=true]
@@ -81,7 +81,7 @@ Only the lines where Vim recognized a file name and line number are listed here.
 It assumes those are the interesting lines and the rest is just boring messages.
 However, sometimes unrecognized lines do contain something you want to see.
 Output from the linker, for example, about an undefined function.
-To see all the messages add a "\verb!!!" to the command:
+To see all the messages add a "\texttt{!}" to the command:
 
 \begin{Verbatim}[samepage=true]
  :clist!
@@ -103,14 +103,14 @@ To go back to the previous error, use:
 Other commands to move around in the error list:
 
 \begin{center} \begin{tabular}{l l}
-				\verb!:cfirst! & to first error \\
-				\verb!:clast! & to last error \\
-				\verb!:cc 3! & to error nr 3 \\
+				\texttt{:cfirst} & to first error \\
+				\texttt{:clast} & to last error \\
+				\texttt{:cc 3} & to error nr 3 \\
 \end{tabular} \end{center}
 
 \subsubsection{Using another compiler}
-The name of the program to run when the "\verb!:make!" command is executed is defined by the \verb!'makeprg'! option.
-Usually this is set to "\verb!make!", but Visual C++ users should set this to "\verb!nmake!" by executing the following command:
+The name of the program to run when the "\texttt{:make}" command is executed is defined by the \texttt{'makeprg'} option.
+Usually this is set to "\texttt{make}", but Visual C++ users should set this to "\texttt{nmake}" by executing the following command:
 
 \begin{Verbatim}[samepage=true]
  :set makeprg=nmake
@@ -125,20 +125,20 @@ Example:
 \end{Verbatim}
 
 You can include special Vim keywords in the command specification.
-The \verb!%! character expands to the name of the current file.
+The \texttt{\%} character expands to the name of the current file.
 So if you execute the command:
 
 \begin{Verbatim}[samepage=true]
  :set makeprg=make\ %
 \end{Verbatim}
 
-When you are editing main.c, then "\verb!:make!" executes the following command:
+When you are editing main.c, then "\texttt{:make}" executes the following command:
 
 \begin{Verbatim}[samepage=true]
  make main.c
 \end{Verbatim}
 
-This is not too useful, so you will refine the command a little and use the \verb!:r! (root) modifier:
+This is not too useful, so you will refine the command a little and use the \texttt{:r} (root) modifier:
 
 \begin{Verbatim}[samepage=true]
  :set makeprg=make\ %:r.o
@@ -150,11 +150,11 @@ Now the command executed is as follows:
  make main.o
 \end{Verbatim}
 
-More about these modifiers here: |\verb!:h filename-modifiers!|.
+More about these modifiers here: |\texttt{:h filename-modifiers}|.
 \subsubsection{Old error lists}
-Suppose you "\verb!:make!" a program.
+Suppose you "\texttt{:make}" a program.
 There is a warning message in one file and an error message in another.
-You fix the error and use "\verb!:make!" again to check if it was really fixed.
+You fix the error and use "\texttt{:make}" again to check if it was really fixed.
 Now you want to look at the warning message.
 It doesn't show up in the last error list, since the file with the warning wasn't compiled again.
 You can go back to the previous error list with:
@@ -163,7 +163,7 @@ You can go back to the previous error list with:
  :colder
 \end{Verbatim}
 
-Then use "\verb!:clist!" and "\verb!:cc {nr}!" to jump to the place with the warning.
+Then use "\texttt{:clist}" and "\texttt{:cc {nr}}" to jump to the place with the warning.
 
 To go forward to the next error list:
 
@@ -174,12 +174,12 @@ To go forward to the next error list:
 Vim remembers ten error lists.
 \subsubsection{Switching compilers}
 You have to tell Vim what format the error messages are that your compiler produces.
-This is done with the \verb!'errorformat'! option.
+This is done with the \texttt{'errorformat'} option.
 The syntax of this option is quite complicated and it can be made to fit almost any compiler.
-You can find the explanation here: |\verb!:h errorformat!|.
+You can find the explanation here: |\texttt{:h errorformat}|.
 
 You might be using various different compilers.
-Setting the \verb!'makeprg'! option, and especially the \verb!'errorformat'! each time is not easy.
+Setting the \texttt{'makeprg'} option, and especially the \texttt{'errorformat'} each time is not easy.
 Vim offers a simple method for this.
 For example, to switch to using the Microsoft Visual C++ compiler:
 
@@ -187,38 +187,38 @@ For example, to switch to using the Microsoft Visual C++ compiler:
  :compiler msvc
 \end{Verbatim}
 
-This will find the Vim script for the "\verb!msvc!" compiler and set the appropriate options.
+This will find the Vim script for the "\texttt{msvc}" compiler and set the appropriate options.
 
 You can write your own compiler files.  See \hyperref[write-compiler-plugin]{|\texttt{write-compiler-plugin}|}.
 
 \subsubsection{Output redirection}
-The "\verb!:make!" command redirects the output of the executed program to an error file.
-How this works depends on various things, such as the \verb!'shell'!.
-If your "\verb!:make!" command doesn't capture the output, check the \verb!'makeef'! and \verb!'shellpipe'! options.
-The \verb!'shellquote'! and \verb!'shellxquote'! options might also matter.
+The "\texttt{:make}" command redirects the output of the executed program to an error file.
+How this works depends on various things, such as the \texttt{'shell'}.
+If your "\texttt{:make}" command doesn't capture the output, check the \texttt{'makeef'} and \texttt{'shellpipe'} options.
+The \texttt{'shellquote'} and \texttt{'shellxquote'} options might also matter.
 
-In case you can't get "\verb!:make!" to redirect the file for you, an alternative is to compile the program in another window and redirect the output into a file.
+In case you can't get "\texttt{:make}" to redirect the file for you, an alternative is to compile the program in another window and redirect the output into a file.
 Then have Vim read this file with:
 
 \begin{Verbatim}[samepage=true]
  :cfile {filename}
 \end{Verbatim}
 
-Jumping to errors will work like with the "\verb!:make!" command.
+Jumping to errors will work like with the "\texttt{:make}" command.
 \subsection{Indenting C style text}
 A program is much easier to understand when the lines have been properly indented.
 Vim offers various ways to make this less work.
-For C or C style programs like Java or C++, set the \verb!'cindent'! option.
+For C or C style programs like Java or C++, set the \texttt{'cindent'} option.
 Vim knows a lot about C programs and will try very hard to automatically set the indent for you.
-Set the \verb!'shiftwidth'! option to the amount of spaces you want for a deeper level.
+Set the \texttt{'shiftwidth'} option to the amount of spaces you want for a deeper level.
 Four spaces will work fine.
-One "\verb!:set!" command will do it:
+One "\texttt{:set}" command will do it:
 
 \begin{Verbatim}[samepage=true]
  :set cindent shiftwidth=4
 \end{Verbatim}
 
-With this option enabled, when you type something such as "\verb!if (x)!", the next line will automatically be indented an additional level.
+With this option enabled, when you type something such as "\texttt{if (x)}", the next line will automatically be indented an additional level.
 
 \begin{Verbatim}[samepage=true]
                              if (flag)
@@ -229,18 +229,18 @@ With this option enabled, when you type something such as "\verb!if (x)!", the n
     Automatic unindent <--   }
 \end{Verbatim}
 
-When you type something in curly braces (\verb!{}!), the text will be indented at the start and unindented at the end.
-The unindenting will happen after typing the '\verb!}!', since Vim can't guess what you are going to type.
+When you type something in curly braces (\texttt{\{\}}), the text will be indented at the start and unindented at the end.
+The unindenting will happen after typing the '\texttt{}\}', since Vim can't guess what you are going to type.
 
 One side effect of automatic indentation is that it helps you catch errors in your code early.
-When you type a \verb!}! to finish a function, only to find that the automatic indentation gives it more indent than what you expected, there is probably a \verb!}! missing.
-Use the "\verb!%!" command to find out which \verb!{! matches the \verb!}! you typed.
+When you type a \texttt{\}} to finish a function, only to find that the automatic indentation gives it more indent than what you expected, there is probably a \texttt{\}} missing.
+Use the "\texttt{\%}" command to find out which \texttt{{\} matches the \texttt{\}} you typed.
 
-A missing \verb!)! and \verb!;! also cause extra indent.
+A missing \texttt{)} and \texttt{;} also cause extra indent.
 Thus if you get more white space than you would expect, check the preceding lines.
 
 When you have code that is badly formatted, or you inserted and deleted lines, you need to re-indent the lines.
-The "\verb!=!" operator does this.
+The "\texttt{=}" operator does this.
 The simplest form is:
 
 \begin{Verbatim}[samepage=true]
@@ -249,9 +249,9 @@ The simplest form is:
 
 This indents the current line.
 Like with all operators, there are three ways to use it.
-In Visual mode "\verb!=!" indents the selected lines.
-A useful text object is "\verb!a{!".
-This selects the current \verb!{}! block.
+In Visual mode "\texttt{=}" indents the selected lines.
+A useful text object is "\texttt{a\{}".
+This selects the current \texttt{\{\}} block.
 Thus, to re-indent the code block the cursor is in:
 
 \begin{Verbatim}[samepage=true]
@@ -269,9 +269,9 @@ The automatic indenting does a good job, but in some situations you might want t
 \subsubsection{Setting indent style}
 Different people have different styles of indentation.
 By default Vim does a pretty good job of indenting in a way that 90\% of programmers do.
-There are different styles, however; so if you want to, you can customize the indentation style with the \verb!'cinoptions'! option.
+There are different styles, however; so if you want to, you can customize the indentation style with the \texttt{'cinoptions'} option.
 
-By default \verb!'cinoptions'! is empty and Vim uses the default style.
+By default \texttt{'cinoptions'} is empty and Vim uses the default style.
 You can add various items where you want something different.
 For example, to make curly braces be placed like this:
 
@@ -289,16 +289,16 @@ Use this command:
  :set cinoptions+={2
 \end{Verbatim}
 
-There are many of these items.  See |\verb!:h cinoptions-values!|.
+There are many of these items.  See |\texttt{:h cinoptions-values}|.
 \subsection{Automatic indenting}
-You don't want to switch on the \verb!'cindent'! option manually every time you edit a C file.
+You don't want to switch on the \texttt{'cindent'} option manually every time you edit a C file.
 This is how you make it work automatically:
 
 \begin{Verbatim}[samepage=true]
  :filetype indent on
 \end{Verbatim}
 
-Actually, this does a lot more than switching on \verb!'cindent'! for C files.
+Actually, this does a lot more than switching on \texttt{'cindent'} for C files.
 First of all, it enables detecting the type of a file.
 That's the same as what is used for syntax highlighting.
 
@@ -325,7 +325,7 @@ Now you need to write this in a file with a specific name:
     {directory}/indent/{filetype}.vim
 \end{Verbatim}
 
-The \verb!{filetype}! is the name of the file type, such as "\verb!cpp!" or "\verb!java!".
+The \texttt{{filetype}} is the name of the file type, such as "\texttt{cpp}" or "\texttt{java}".
 You can see the exact name that Vim detected with this command:
 
 \begin{Verbatim}[samepage=true]
@@ -338,9 +338,9 @@ In this file the output is:
     filetype=help 
 \end{Verbatim}
 
-Thus you would use "\verb!help!" for \verb!{filetype}!.
+Thus you would use "\texttt{help}" for \texttt{{filetype}}.
 
-For the \verb!{directory}! part you need to use your runtime directory.
+For the \texttt{{directory}} part you need to use your runtime directory.
 Look at the output of this command:
 
 \begin{Verbatim}[samepage=true]
@@ -354,7 +354,7 @@ Thus if the output looks like this:
     runtimepath=~/.vim,/usr/local/share/vim/vim60/runtime,~/.vim/after 
 \end{Verbatim}
 
-You use "\verb!~/.vim!" for \verb!{directory}!.
+You use "\texttt{~/.vim}" for \texttt{{directory}}.
 Then the resulting file name is:
 
 \begin{Verbatim}[samepage=true]
@@ -362,22 +362,22 @@ Then the resulting file name is:
 \end{Verbatim}
 
 Instead of switching the indenting off, you could write your own indent file.
-How to do that is explained here: |\verb!:h indent-expression!|.
+How to do that is explained here: |\texttt{:h indent-expression}|.
 \subsection{Other indenting}
-The most simple form of automatic indenting is with the \verb!'autoindent'! option.
+The most simple form of automatic indenting is with the \texttt{'autoindent'} option.
 It uses the indent from the previous line.
-A bit smarter is the \verb!'smartindent'! option.
+A bit smarter is the \texttt{'smartindent'} option.
 This is useful for languages where no indent file is available.
-\verb!'smartindent'! is not as smart as \verb!'cindent'!, but smarter than \verb!'autoindent'!.
+\texttt{'smartindent'} is not as smart as \texttt{'cindent'}, but smarter than \texttt{'autoindent'}.
 
-With \verb!'smartindent'! set, an extra level of indentation is added for each \verb!{! and removed for each \verb!}!.
-An extra level of indentation will also be added for any of the words in the \verb!'cinwords'! option.
-Lines that begin with \verb!#! are treated specially: all indentation is removed.
+With \texttt{'smartindent'} set, an extra level of indentation is added for each \texttt{\{} and removed for each \texttt\{\}}.
+An extra level of indentation will also be added for any of the words in the \texttt{'cinwords'} option.
+Lines that begin with \texttt{\#} are treated specially: all indentation is removed.
 This is done so that preprocessor directives will all start in column 1.
 The indentation is restored for the next line.
 
 \subsubsection{Correcting indents}
-When you are using \verb!'autoindent'! or \verb!'smartindent'! to get the indent of the previous line, there will be many times when you need to add or remove one \verb!'shiftwidth'! worth of indent.
+When you are using \texttt{'autoindent'} or \texttt{'smartindent'} to get the indent of the previous line, there will be many times when you need to add or remove one \texttt{'shiftwidth'} worth of indent.
 A quick way to do this is using the CTRL-D and CTRL-T commands in Insert mode.
 
 For example, you are typing a shell script that is supposed to look like this:
@@ -411,7 +411,7 @@ The result:
          echo 
 \end{Verbatim}
 
-The CTRL-T command, in Insert mode, adds one \verb!'shiftwidth'! to the indent, no matter where in the line you are.
+The CTRL-T command, in Insert mode, adds one \texttt{'shiftwidth'} to the indent, no matter where in the line you are.
 
 You continue typing the second line, <Enter> and the third line.
 This time the indent is OK.
@@ -426,26 +426,26 @@ Now you have this:
 \end{Verbatim}
 
 To remove the superfluous indent in the last line press CTRL-D.
-This deletes one \verb!'shiftwidth'! worth of indent, no matter where you are in the line.
+This deletes one \texttt{'shiftwidth'} worth of indent, no matter where you are in the line.
 
-When you are in Normal mode, you can use the "\verb!>>!" and "\verb!<<!" commands to shift lines.
-"\verb!>!" and "\verb!<!" are operators, thus you have the usual three ways to specify the lines you want to indent.
+When you are in Normal mode, you can use the "\texttt{>>}" and "\texttt{<<}" commands to shift lines.
+"\texttt{>}" and "\texttt{<}" are operators, thus you have the usual three ways to specify the lines you want to indent.
 A useful combination is:
 
 \begin{Verbatim}[samepage=true]
  >i{
 \end{Verbatim}
 
-This adds one indent to the current block of lines, inside \verb!{}!.
-The \verb!{! and \verb!}! lines themselves are left unmodified.
-"\verb!>a{!" includes them.
-In this example the cursor is on "\verb!printf!":
+This adds one indent to the current block of lines, inside \texttt{\{\}}.
+The \texttt{\{} and \texttt{\}} lines themselves are left unmodified.
+"\texttt{>a\{}" includes them.
+In this example the cursor is on "\texttt{printf}":
 
 % The minipage solution isn't the most elegant but works well to integrate the verbatim inside the cells
 % cf https://stackoverflow.com/questions/3220121/verbatim-environment-inside-latex-cell
 \begin{center} \begin{tabular}{|c|c|c|}
 				\hline
-				original text & after "\verb!>i{!" & after "\verb!>a{!" \\ 
+				original text & after "\texttt{>i\{\}" & after "\texttt{>a\{\}" \\ 
 				\begin{minipage}{4cm}
 				\begin{verbatim}
 if (flag)       
@@ -478,12 +478,12 @@ if (flag)
 				\hline
 \end{tabular} \end{center}
 \subsection{Tabs and spaces}
-\verb!'tabstop'! is set to eight by default.
+\texttt{'tabstop'} is set to eight by default.
 Although you can change it, you quickly run into trouble later.
 Other programs won't know what tabstop value you used.
 They probably use the default value of eight, and your text suddenly looks very different.
 Also, most printers use a fixed tabstop value of eight.
-Thus it's best to keep \verb!'tabstop'! alone.
+Thus it's best to keep \texttt{'tabstop'} alone.
 (If you edit a file which was written with a different tabstop setting, see |\hyperref[Indents and tabs]{\texttt{Indents and tabs}}| for how to fix that.)
 
 For indenting lines in a program, using a multiple of eight spaces makes you quickly run into the right border of the window.
@@ -507,8 +507,8 @@ Fortunately, Vim supports both methods quite well.
 If you are using a combination of tabs and spaces, you just edit normally.
 The Vim defaults do a fine job of handling things.
 
-You can make life a little easier by setting the \verb!'softtabstop'! option.
-This option tells Vim to make the <Tab> key look and feel as if tabs were set at the value of \verb!'softtabstop'!, but actually use a combination of tabs and spaces.
+You can make life a little easier by setting the \texttt{'softtabstop'} option.
+This option tells Vim to make the <Tab> key look and feel as if tabs were set at the value of \texttt{'softtabstop'}, but actually use a combination of tabs and spaces.
 
 After you execute the following command, every time you press the <Tab> key the cursor moves to the next 4-column boundary:
 
@@ -521,27 +521,27 @@ The second time, Vim takes out the 4 spaces and puts in a <Tab> (thus taking you
 Thus Vim uses as many <Tab>s as possible, and then fills up with spaces.
 
 When backspacing it works the other way around.
-A <BS> will always delete the amount specified with \verb!'softtabstop'!.
+A <BS> will always delete the amount specified with \texttt{'softtabstop'}.
 Then <Tab>s are used as many as possible and spaces to fill the gap.
 
 The following shows what happens pressing <Tab> a few times, and then using <BS>.
-A "\verb!.!" stands for a space and "\verb!------->!" for a <Tab>.
+A "\texttt{.}" stands for a space and "\texttt{------->}" for a <Tab>.
 
 \begin{center} \begin{tabular}{l l}
 type & result \\ 
-\verb!<Tab>! & \verb!....! \\
-\verb!<Tab><Tab>! & \verb!------->! \\
-\verb!<Tab><Tab><Tab>! & \verb!------->....! \\
-\verb!<Tab><Tab><Tab><BS>! & \verb!------->! \\
-\verb!<Tab><Tab><Tab><BS><BS>! & \verb!....! \\		
+\texttt{<Tab>} & \texttt{....} \\
+\texttt{<Tab><Tab>} & \texttt{------->} \\
+\texttt{<Tab><Tab><Tab>} & \texttt{------->....} \\
+\texttt{<Tab><Tab><Tab><BS>} & \texttt{------->} \\
+\texttt{<Tab><Tab><Tab><BS><BS>} & \texttt{....} \\		
 \end{tabular} \end{center}
 
-An alternative is to use the \verb!'smarttab'! option.
-When it's set, Vim uses \verb!'shiftwidth'! for a <Tab> typed in the indent of a line, and a real <Tab> when typed after the first non-blank character.
-However, <BS> doesn't work like with \verb!'softtabstop'!.
+An alternative is to use the \texttt{'smarttab'} option.
+When it's set, Vim uses \texttt{'shiftwidth'} for a <Tab> typed in the indent of a line, and a real <Tab> when typed after the first non-blank character.
+However, <BS> doesn't work like with \texttt{'softtabstop'}.
 
 \subsubsection{Just spaces}
-If you want absolutely no tabs in your file, you can set the \verb!'expandtab'! option:
+If you want absolutely no tabs in your file, you can set the \texttt{'expandtab'} option:
 
 \begin{Verbatim}[samepage=true]
  :set expandtab
@@ -555,9 +555,9 @@ Thus after typing one <Tab> you have to press the <BS> key up to eight times to 
 If you are in the indent, pressing CTRL-D will be a lot quicker.
 
 \subsubsection{Changing tabs in spaces (and back)}
-Setting \verb!'expandtab'! does not affect any existing tabs.
+Setting \texttt{'expandtab'} does not affect any existing tabs.
 In other words, any tabs in the document remain tabs.
-If you want to convert tabs to spaces, use the "\verb!:retab!" command.
+If you want to convert tabs to spaces, use the "\texttt{:retab}" command.
 Use these commands:
 
 \begin{Verbatim}[samepage=true]
@@ -567,7 +567,7 @@ Use these commands:
 
 Now Vim will have changed all indents to use spaces instead of tabs.
 However, all tabs that come after a non-blank character are kept.
-If you want these to be converted as well, add a \verb,!,:
+If you want these to be converted as well, add a \texttt{!}:
 
 \begin{Verbatim}[samepage=true]
  :%retab!
@@ -581,7 +581,7 @@ To check if these exist, you could use this:
 \end{Verbatim}
 
 It's recommended not to use hard tabs inside a string.
-Replace them with "\verb!\t!" to avoid trouble.
+Replace them with "\texttt{\textbackslash{}t}" to avoid trouble.
 
 The other way around works just as well:
 
@@ -608,8 +608,8 @@ You then ask Vim to format it by positioning the cursor at the start of the comm
  gq]/
 \end{Verbatim}
 
-"\verb!gq!" is the operator to format text.
-"\verb!]/!" is the motion that takes you to the end of a comment.
+"\texttt{gq}" is the operator to format text.
+"\texttt{]/}" is the motion that takes you to the end of a comment.
 The result is:
 
 \begin{Verbatim}[samepage=true]
@@ -619,9 +619,9 @@ The result is:
 \end{Verbatim}
 
 Notice that Vim properly handled the beginning of each line.
-An alternative is to select the text that is to be formatted in Visual mode and type "\verb!gq!".
+An alternative is to select the text that is to be formatted in Visual mode and type "\texttt{gq}".
 
-To add a new line to the comment, position the cursor on the middle line and press "\verb!o!".
+To add a new line to the comment, position the cursor on the middle line and press "\texttt{o}".
 The result looks like this:
 
 \begin{Verbatim}[samepage=true]
@@ -633,7 +633,7 @@ The result looks like this:
 
 Vim has automatically inserted a star and a space for you.
 Now you can type the comment text.
-When it gets longer than \verb!'textwidth'!, Vim will break the line.
+When it gets longer than \texttt{'textwidth'}, Vim will break the line.
 Again, the star is inserted automatically:
 
 \begin{Verbatim}[samepage=true]
@@ -644,22 +644,22 @@ Again, the star is inserted automatically:
      */ 
 \end{Verbatim}
 
-For this to work some flags must be present in \verb!'formatoptions'!:
+For this to work some flags must be present in \texttt{'formatoptions'}:
 
 \begin{center} \begin{tabular}{c l}
-\verb!r! & insert the star when typing <Enter> in Insert mode \\
-\verb!o! & insert the star when using "\verb!o!" or "\verb!O!" in Normal mode \\
-\verb!c! & break comment text according to \verb!'textwidth'! \\
+\texttt{r} & insert the star when typing <Enter> in Insert mode \\
+\texttt{o} & insert the star when using "\texttt{o}" or "\texttt{O}" in Normal mode \\
+\texttt{c} & break comment text according to \texttt{'textwidth'} \\
 \end{tabular} \end{center}
 
-See |\verb!:h fo-table!| for more flags.
+See |\texttt{:h fo-table}| for more flags.
 
 \subsubsection{Defining a comment}
-The \verb!'comments'! option defines what a comment looks like.
+The \texttt{'comments'} option defines what a comment looks like.
 Vim distinguishes between a single-line comment and a comment that has a different start, end and middle part.
 
 Many single-line comments start with a specific character.
-In C++ \verb!//! is used, in Makefiles \verb!#!, in Vim scripts \verb!"!.
+In C++ \texttt{//} is used, in Makefiles \texttt{\#}, in Vim scripts \texttt{"}.
 For example, to make Vim understand C++ comments:
 
 \begin{Verbatim}[samepage=true]
@@ -667,28 +667,28 @@ For example, to make Vim understand C++ comments:
 \end{Verbatim}
 
 The colon separates the flags of an item from the text by which the comment is recognized.
-The general form of an item in \verb!'comments'! is:
+The general form of an item in \texttt{'comments'} is:
 
 \begin{Verbatim}[samepage=true]
     {flags}:{text}
 \end{Verbatim}
 
-The \verb!{flags}! part can be empty, as in this case.
+The \texttt{{flags}} part can be empty, as in this case.
 
 Several of these items can be concatenated, separated by commas.
 This allows recognizing different types of comments at the same time.
 For example, let's edit an e-mail message.
-When replying, the text that others wrote is preceded with "\verb!>!" and "\verb!!!" characters.
+When replying, the text that others wrote is preceded with "\texttt{>}" and "\texttt{!}" characters.
 This command would work:
 
 \begin{Verbatim}[samepage=true]
  :set comments=n:>,n:!
 \end{Verbatim}
 
-There are two items, one for comments starting with "\verb!>!" and one for comments that start with "\verb!!!".
-Both use the flag "\verb!n!".
+There are two items, one for comments starting with "\texttt{>}" and one for comments that start with "\texttt{!}".
+Both use the flag "\texttt{n}".
 This means that these comments nest.
-Thus a line starting with "\verb!>!" may have another comment after the "\verb!>!".
+Thus a line starting with "\texttt{>}" may have another comment after the "\texttt{>}".
 This allows formatting a message like this:
 
 \begin{Verbatim}[samepage=true]
@@ -700,7 +700,7 @@ This allows formatting a message like this:
     site? 
 \end{Verbatim}
 
-Try setting \verb!'textwidth'! to a different value, e.g., 80, and format the text by Visually selecting it and typing "\verb!gq!".
+Try setting \texttt{'textwidth'} to a different value, e.g., 80, and format the text by Visually selecting it and typing "\texttt{gq}".
 The result is:
 
 \begin{Verbatim}[samepage=true]
@@ -710,29 +710,29 @@ The result is:
 \end{Verbatim}
 
 You will notice that Vim did not move text from one type of comment to another.
-The "\verb!I!" in the second line would have fit at the end of the first line, but since that line starts with "\verb!> !!" and the second line with "\verb!>!", Vim knows that this is a different kind of comment.
+The "\texttt{I}" in the second line would have fit at the end of the first line, but since that line starts with "\texttt{> !}" and the second line with "\texttt{>}", Vim knows that this is a different kind of comment.
 
 \subsubsection{A three part comment}
-A C comment starts with "\verb!/*!", has "\verb!*!" in the middle and "\verb!*/!" at the end.
-The entry in \verb!'comments'! for this looks like this:
+A C comment starts with "\texttt{/*}", has "\texttt{*}" in the middle and "\texttt{*/}" at the end.
+The entry in \texttt{'comments'} for this looks like this:
 
 \begin{Verbatim}[samepage=true]
  :set comments=s1:/*,mb:*,ex:*/
 \end{Verbatim}
 
-The start is defined with "\verb!s1:/*!".
-The "\verb!s!" indicates the start of a three-piece comment.
-The colon separates the flags from the text by which the comment is recognized: "\verb!/*!".
-There is one flag: "\verb!1!".
+The start is defined with "\texttt{s1:/*}".
+The "\texttt{s}" indicates the start of a three-piece comment.
+The colon separates the flags from the text by which the comment is recognized: "\texttt{/*}".
+There is one flag: "\texttt{1}".
 This tells Vim that the middle part has an offset of one space.
 
-The middle part "\verb!mb:*!" starts with "\verb!m!", which indicates it is a middle part.
-The "\verb!b!" flag means that a blank must follow the text.
-Otherwise Vim would consider text like "\verb!*pointer!" also to be the middle of a comment.
+The middle part "\texttt{mb:*}" starts with "\texttt{m}", which indicates it is a middle part.
+The "\texttt{b}" flag means that a blank must follow the text.
+Otherwise Vim would consider text like "\texttt{*pointer}" also to be the middle of a comment.
 
-The end part "\verb!ex:*/!" has the "\verb!e!" for identification.
-The "\verb!x!" flag has a special meaning.
+The end part "\texttt{ex:*/}" has the "\texttt{e}" for identification.
+The "\texttt{x}" flag has a special meaning.
 It means that after Vim automatically inserted a star, typing / will remove the extra space.
 
-For more details see |\verb!:h format-comments!|.
+For more details see |\texttt{:h format-comments}|.
 \clearpage
