--- a/src/usr_43.tex
+++ b/src/usr_43.tex
@@ -7,15 +7,15 @@ This chapter explains how to do it automatically.
 \label{filetype-plugin}
 How to start using filetype plugins has already been discussed here: \hyperref[add-filetype-plugin]{|\texttt{add-filetype-plugin}|}.
 But you probably are not satisfied with the default settings, because they have been kept minimal.
-Suppose that for C files you want to set the \verb!'softtabstop'! option to 4 and define a mapping to insert a three-line comment.
+Suppose that for C files you want to set the \texttt{'softtabstop'} option to 4 and define a mapping to insert a three-line comment.
 You do this with only two steps:
 
 \phantomsection                            
 \label{your-runtime-dir}
 \begin{enumerate}
 				\item Create your own runtime directory.
-								On Unix this usually is "\verb!~/.vim!".
-								In this directory create the "\verb!ftplugin!" directory:
+								On Unix this usually is "\texttt{~/.vim}".
+								In this directory create the "\texttt{ftplugin}" directory:
 
 								\begin{Verbatim}[samepage=true]
 	mkdir ~/.vim
@@ -23,7 +23,7 @@ You do this with only two steps:
 								\end{Verbatim}
 
 
-								When you are not on Unix, check the value of the \verb!'runtimepath'! option to see where Vim will look for the "\verb!ftplugin!" directory:
+								When you are not on Unix, check the value of the \texttt{'runtimepath'} option to see where Vim will look for the "\texttt{ftplugin}" directory:
 
 								\begin{Verbatim}[samepage=true]
  set runtimepath
@@ -31,9 +31,9 @@ You do this with only two steps:
 
 								You would normally use the first directory name (before the first comma).
 
-								You might want to prepend a directory name to the \verb!'runtimepath'! option in your |\verb!:h vimrc!| file if you don't like the default value.
+								You might want to prepend a directory name to the \texttt{'runtimepath'} option in your |\texttt{:h vimrc}| file if you don't like the default value.
 
-				\item Create the file "\verb!~/.vim/ftplugin/c.vim!", with the contents:
+				\item Create the file "\texttt{~/.vim/ftplugin/c.vim}", with the contents:
 								\begin{Verbatim}[samepage=true]
 	setlocal softtabstop=4
 	noremap <buffer> <LocalLeader>c o/**************<CR><CR>/<Esc>
@@ -41,17 +41,17 @@ You do this with only two steps:
 \end{enumerate}
 
 Try editing a C file.
-You should notice that the \verb!'softtabstop'! option is set to 4.
+You should notice that the \texttt{'softtabstop'} option is set to 4.
 But when you edit another file it's reset to the default zero.
-That is because the "\verb!:setlocal!" command was used.
-This sets the \verb!'softtabstop'! option only locally to the buffer.
+That is because the "\texttt{:setlocal}" command was used.
+This sets the \texttt{'softtabstop'} option only locally to the buffer.
 As soon as you edit another buffer, it will be set to the value set for that buffer.
-For a new buffer it will get the default value or the value from the last "\verb!:set!" command.
+For a new buffer it will get the default value or the value from the last "\texttt{:set}" command.
 
-Likewise, the mapping for "\verb!\c!" will disappear when editing another buffer.
-The "\verb!:map <buffer>!" command creates a mapping that is local to the current buffer.
-This works with any mapping command: "\verb!:map!!", "\verb!:vmap!", etc.
-The |\verb!:h <LocalLeader>!| in the mapping is replaced with the value of the "\verb!maplocalleader!" variable.
+Likewise, the mapping for "\texttt{\textbackslash{}c}" will disappear when editing another buffer.
+The "\texttt{:map <buffer>}" command creates a mapping that is local to the current buffer.
+This works with any mapping command: "\texttt{:map!}", "\texttt{:vmap}", etc.
+The |\texttt{:h <LocalLeader>}| in the mapping is replaced with the value of the "\texttt{maplocalleader}" variable.
 
 You can find examples for filetype plugins in this directory:
 
@@ -66,7 +66,7 @@ If you are using a type of file that is not recognized by Vim, this is how to ge
 You need a runtime directory of your own.
 See \hyperref[your-runtime-dir]{|\texttt{your-runtime-dir}|} above.
 
-Create a file "\verb!filetype.vim!" which contains an autocommand for your filetype.
+Create a file "\texttt{filetype.vim}" which contains an autocommand for your filetype.
 (Autocommands were explained in section |\hyperref[Autocommands]{\texttt{Autocommands}}|.)
 Example:
 
@@ -76,16 +76,16 @@ Example:
  augroup END
 \end{Verbatim}
 
-This will recognize all files that end in "\verb!.xyz!" as the "\verb!xyz"! filetype.
-The "\verb!:augroup!" commands put this autocommand in the "\verb!filetypedetect!" group.
-This allows removing all autocommands for filetype detection when doing "\verb!:filetype off!".
-The "\verb!setf!" command will set the \verb!'filetype'! option to its argument, unless it was set already.
-This will make sure that \verb!'filetype'! isn't set twice.
+This will recognize all files that end in "\texttt{.xyz}" as the "\texttt{xyz"} filetype.
+The "\texttt{:augroup}" commands put this autocommand in the "\texttt{filetypedetect}" group.
+This allows removing all autocommands for filetype detection when doing "\texttt{:filetype off}".
+The "\texttt{setf}" command will set the \texttt{'filetype'} option to its argument, unless it was set already.
+This will make sure that \texttt{'filetype'} isn't set twice.
 
 You can use many different patterns to match the name of your file.
 Directory names can also be included.
-See |\verb!:h autocmd-patterns!|.
-For example, the files under "\verb!/usr/share/scripts/!" are all "\verb!ruby!" files, but don't have the expected file name extension.
+See |\texttt{:h autocmd-patterns}|.
+For example, the files under "\texttt{/usr/share/scripts/}" are all "\texttt{ruby}" files, but don't have the expected file name extension.
 Adding this to the example above:
 
 \begin{Verbatim}[samepage=true]
@@ -96,10 +96,10 @@ Adding this to the example above:
 \end{Verbatim}
 
 However, if you now edit a file /usr/share/scripts/README.txt, this is not a
-ruby file.  The danger of a pattern ending in "\verb!*!" is that it quickly matches
+ruby file.  The danger of a pattern ending in "\texttt{*}" is that it quickly matches
 too many files.  To avoid trouble with this, put the filetype.vim file in
-another directory, one that is at the end of \verb!'runtimepath'!.  For Unix for
-example, you could use "\verb!~/.vim/after/filetype.vim!".
+another directory, one that is at the end of \texttt{'runtimepath'}.  For Unix for
+example, you could use "\texttt{~/.vim/after/filetype.vim}".
 
 You now put the detection of text files in ~/.vim/filetype.vim:
 
@@ -109,8 +109,8 @@ You now put the detection of text files in ~/.vim/filetype.vim:
  augroup END
 \end{Verbatim}
 
-That file is found in \verb!'runtimepath'! first.
-Then use this in \verb!~/.vim/after/filetype.vim!, which is found last:
+That file is found in \texttt{'runtimepath'} first.
+Then use this in \texttt{~/.vim/after/filetype.vim}, which is found last:
 
 \begin{Verbatim}[samepage=true]
  augroup filetypedetect
@@ -118,19 +118,19 @@ Then use this in \verb!~/.vim/after/filetype.vim!, which is found last:
  augroup END
 \end{Verbatim}
 
-What will happen now is that Vim searches for "\verb!filetype.vim!" files in each directory in \verb!'runtimepath'!.
-First \verb!~/.vim/filetype.vim! is found.
-The autocommand to catch \verb!*.txt! files is defined there.
-Then Vim finds the filetype.vim file in \verb!$VIMRUNTIME!, which is halfway \verb!'runtimepath'!.
-Finally \verb!/.vim/after/filetype.vim! is found and the autocommand for detecting ruby files in \verb!/usr/share/scripts! is added.
+What will happen now is that Vim searches for "\texttt{filetype.vim}" files in each directory in \texttt{'runtimepath'}.
+First \texttt{~/.vim/filetype.vim} is found.
+The autocommand to catch \texttt{*.txt} files is defined there.
+Then Vim finds the filetype.vim file in \texttt{\$VIMRUNTIME}, which is halfway \texttt{'runtimepath'}.
+Finally \texttt{/.vim/after/filetype.vim} is found and the autocommand for detecting ruby files in \texttt{/usr/share/scripts} is added.
 
-When you now edit \verb!/usr/share/scripts/README.txt!, the autocommands are checked in the order in which they were defined.
-The \verb!*.txt! pattern matches, thus "\verb!setf text!" is executed to set the filetype to "\verb!text!".
-The pattern for ruby matches too, and the "\verb!setf ruby!" is executed.
-But since \verb!'filetype'! was already set to "\verb!text!", nothing happens here.
+When you now edit \texttt{/usr/share/scripts/README.txt}, the autocommands are checked in the order in which they were defined.
+The \texttt{*.txt} pattern matches, thus "\texttt{setf text}" is executed to set the filetype to "\texttt{text}".
+The pattern for ruby matches too, and the "\texttt{setf ruby}" is executed.
+But since \texttt{'filetype'} was already set to "\texttt{text}", nothing happens here.
 
-When you edit the file \verb!/usr/share/scripts/foobar! the same autocommands are checked.
-Only the one for ruby matches and "\verb!setf ruby!" sets \verb!'filetype'! to ruby.
+When you edit the file \texttt{/usr/share/scripts/foobar} the same autocommands are checked.
+Only the one for ruby matches and "\texttt{setf ruby}" sets \texttt{'filetype'} to ruby.
 
 \subsubsection{Recognizing by contents}
 If your file cannot be recognized by its file name, you might be able to recognize it by its contents.
@@ -140,7 +140,7 @@ For example, many script files start with a line like:
     #!/bin/xyz 
 \end{Verbatim}
 
-To recognize this script create a file "\verb!scripts.vim!" in your runtime directory (same place where filetype.vim goes).
+To recognize this script create a file "\texttt{scripts.vim}" in your runtime directory (same place where filetype.vim goes).
 It might look like this:
 
 \begin{Verbatim}[samepage=true]
@@ -152,18 +152,18 @@ It might look like this:
  endif
 \end{Verbatim}
 
-The first check with \verb!did_filetype()! is to avoid that you will check the contents of files for which the filetype was already detected by the file name.
-That avoids wasting time on checking the file when the "\verb!setf!" command won't do anything.
+The first check with \texttt{did\_filetype()} is to avoid that you will check the contents of files for which the filetype was already detected by the file name.
+That avoids wasting time on checking the file when the "\texttt{setf}" command won't do anything.
 
-The scripts.vim file is sourced by an autocommand in the default \verb!filetype.vim! file.
+The scripts.vim file is sourced by an autocommand in the default \texttt{filetype.vim} file.
 Therefore, the order of checks is:
 
 \begin{enumerate}
-				\item \verb!filetype.vim! files before \verb!$VIMRUNTIME! in \verb!'runtimepath'!
-				\item first part of \verb!$VIMRUNTIME/filetype.vim!
-				\item all \verb!scripts.vim! files in \verb!'runtimepath'!
-				\item remainder of \verb!$VIMRUNTIME/filetype.vim!
-				\item filetype.vim files after \verb!$VIMRUNTIME! in \verb!'runtimepath'!
+				\item \texttt{filetype.vim} files before \texttt{\$VIMRUNTIME} in \texttt{'runtimepath'}
+				\item first part of \texttt{\$VIMRUNTIME/filetype.vim}
+				\item all \texttt{scripts.vim} files in \texttt{'runtimepath'}
+				\item remainder of \texttt{\$VIMRUNTIME/filetype.vim}
+				\item filetype.vim files after \texttt{\$VIMRUNTIME} in \texttt{'runtimepath'}
 \end{enumerate}
 
 If this is not sufficient for you, add an autocommand that matches all files and sources a script or executes a function to check the contents of the file.
